--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,15 +11,13 @@
         <td class="list_description">
           <dl>
             <dt><%= product.title %></dt>
-            <dd><%= truncate(strip_tags(product.description),
-                             length: 80) %></dd>
+            <dd><%= truncate(strip_tags(product.description), length: 80)%></dd>
           </dl>
         </td>
         <td class="list_actions">
           <%= link_to 'Show', product %><br/>
           <%= link_to 'Edit', edit_product_path(product) %><br/>
-          <%= link_to 'Destroy', product, method: :delete,
-                      data: { confirm: 'Are you sure?' } %>
+          <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
         </td>
       </tr>
   <% end %>
