--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <li><a href="/">Questions</a></li>
         <li><a href="/">News</a></li>
         <li><a href="/">Contacts</a></li>
+        <li class="red"><%= Time.now() %></li>
       </ul>
     </div>
     <div id="main"><%= yield %></div>
