--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,11 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+<% if notice %>
+  <p id="notice"><%= notice %></p>
+<% end %>
+<h2>Your Cart</h2>
+<ul>
+  <% @cart.line_items.each do |item| %>
+    <li><%= item.product.title %></li>
+  <li><%= link_to 'Edit', edit_cart_path(@cart) %> |
+      <%= link_to 'Back', carts_path %></li>
+    <% end %>
+</ul>
