--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,10 +10,12 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+
  *= require_tree .
  *= require_self
  */
-
+@import "_bootstrap-sprockets";
+@import "_bootstrap";
 #banner {
  background: #9c9;
  padding: 10px;
