--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -8,11 +8,13 @@
       <td><%= item.quantity %> &times; <%= item.product.title %></td>
       <td><%= item.product.title %></td>
       <td class="item_price"><%= number_to_currency( item.total_price) %></td>
+      <td><%= button_to 'Delete', item,method: :delete, confirm:'Are You Sure' %></td>
     </tr>
   <% end %>
   <tr class="total_line">
     <td colspan="2">Total</td>
     <td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
+
   </tr>
 <table/>
 <%= button_to 'Empty cart', @cart, method: :delete, data: {confirm: 'Are you sure?'} %>
