--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -7,6 +7,6 @@
     <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
 
   </tr>
-<table/>
+</table>
 <%= button_to 'Empty cart', cart, method: :delete, data: {confirm: 'Are you sure?'} %>
 <%= link_to 'Back', store_path, class:"btn btn-success" %>
