--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -8,5 +8,4 @@
 
   </tr>
 </table>
-<%= button_to 'Empty cart', cart, method: :delete, data: {confirm: 'Are you sure?'} %>
-<%= link_to 'Back', store_path, class:"btn btn-success" %>
+<%= button_to 'Empty cart', cart, method: :delete, class:'btn btn-info', data: {confirm: 'Are you sure?'} %>
