--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,6 +1,10 @@
+<% if line_item == @current_item %>
+<tr id="current_item">
+<% else %>
 <tr>
+<% end %>
   <td><%= line_item.quantity %> &times;</td>
   <td><%= line_item.product.title %></td>
   <td class="item_price"><%= number_to_currency( line_item.total_price) %></td>
-  <td><%= button_to 'Delete', line_item,method: :delete, confirm:'Are You Sure' %></td>
+  <td><%= button_to 'Delete', line_item, method: :delete,class:"btn btn-danger btn-sm", data: {confirm:'Are You Sure??'} %></td>
 </tr>
