--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,4 +1,5 @@
-<h2>Your Cart</h2>
+<% unless cart.line_items.empty? %>
+<div class="cart_title">Your Cart</div>
 <table>
    <%= render(cart.line_items) %>
 
@@ -9,3 +10,4 @@
   </tr>
 </table>
 <%= button_to 'Empty cart', cart, method: :delete, class:'btn btn-info', data: {confirm: 'Are you sure?'} %>
+<% end %>
