--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,2 +1,3 @@
+if($('#cart tr').length == 1) {$('#cart').show('blind', 1000)};
 $('#cart').html("<%= escape_javascript render(@cart) %>");
 $('#current_item').css({'background-color': '#ffffff'}).animate({'background-color':'#114411'}, 1000);
