--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,10 @@
   <div id="columns">
     <div id="side">
       <div id="cart">
-        <%= hidden_div_if(@cart.line_items.empty?, id:'cart') do %>
-          <%= render @cart %>
+        <% if @cart %>
+          <%= hidden_div_if(@cart.line_items.empty?, id:'cart') do %>
+            <%= render @cart %>
+          <% end %>
         <% end %>
       </div>
       <ul>
