--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -6,8 +6,7 @@
   <tr class="total_line">
     <td colspan="2">Total</td>
     <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
-
   </tr>
 </table>
-<%= button_to 'Empty cart', cart, method: :delete, class:'btn btn-info', data: {confirm: 'Are you sure?'} %>
+<%= button_to 'Empty cart', cart, method: :delete, class:'btn btn-info', data: {confirm: 'Are you sure?'}, remote:'true' %>
 <% end %>
