--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,12 +1,15 @@
 <% unless cart.line_items.empty? %>
-<div class="cart_title">Your Cart</div>
-<table>
-   <%= render(cart.line_items) %>
+  <div class="cart_title">Your Cart</div>
+  <table>
+     <%= render(cart.line_items) %>
 
-  <tr class="total_line">
-    <td colspan="2">Total</td>
-    <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
-  </tr>
-</table>
-<%= button_to 'Empty cart', cart, method: :delete, class:'btn btn-info', data: {confirm: 'Are you sure?'}, remote:'true' %>
+    <tr class="total_line">
+      <td colspan="2">Total</td>
+      <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
+    </tr>
+  </table>
+  <div class="form-group">
+    <%= button_to "Buy", new_order_path, class:'btn btn-info', method: :get %>
+    <%= button_to 'Empty cart', cart, method: :delete, class:'btn btn-info text-right', data: {confirm: 'Are you sure?'}, remote:'true' %>
+  </div>
 <% end %>
