--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -13,21 +13,21 @@
 
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, size: 40 %>
   </div>
   <div class="field">
     <%= f.label :addres %><br>
-    <%= f.text_area :addres %>
+    <%= f.text_area :addres, rows: 3, cols: 40 %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, size:40 %>
   </div>
   <div class="field">
-    <%= f.label :pay_time %><br>
-    <%= f.text_field :pay_time %>
+    <%= f.label :pay_type %><br>
+    <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: 'Select a payment method' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Place Order' %>
   </div>
 <% end %>
