--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,8 @@
 <h1>New Order</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', orders_path %>
+<div class="depot_form">
+  <fieldset>
+    <legend>Please Enter Your Details</legend>
+    <%= render 'form' %>
+  </fieldset>
+</div>
+<%= link_to 'Back', url_for(:back),class:'btn btn-warning' %>
