--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -9,7 +9,7 @@
     </tr>
   </table>
   <div class="form-group">
-    <%= button_to "Buy", new_order_path, class:'btn btn-info', method: :get %>
+    <%= button_to "Buy", new_order_path, class:'btn btn-info', method: :get if @order.nil? %>
     <%= button_to 'Empty cart', cart, method: :delete, class:'btn btn-info text-right', data: {confirm: 'Are you sure?'}, remote:'true' %>
   </div>
 <% end %>
