--- a/app/views/order_notifier/received.text.erb
+++ b/app/views/order_notifier/received.text.erb
@@ -1,6 +1,6 @@
 Уважаем <%= @order.name %>
 Администрация магазина Pragmatic Store благодарит Вас за недавний заказ.
 Вы заказали следующий товар:
-<%= render @order.line_items -%>
+<%= render @order.line_items %>
 Когда Ваш заказ будет отправлен, мы пошлем Вам по электронной почте отдельное
 сообщение.
