--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,10 @@
           <p><%= link_to 'Sign In', login_path  %></p>
           <p><%= link_to 'Sign UP', new_user_url  %></p>
         <% else %>
-           <%= button_to 'Logout', logout_path, method: :delete %>
+           <%= button_to 'Logout', logout_path, class: 'btn btn-danger', method: :delete %>
         <% end %>
       </ul>
-      <% if session[:user_id] %>
+      <% if authorized_user? %>
         <ul>
           <li><%= link_to 'Orders', orders_path %></li>
           <li><%= link_to 'Products', products_path %></li>
