--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body class="<%= controller.controller_name %>">
   <div id="banner">
     <%= image_tag("logo.png") %>
-    <%= @page_title || "Bookshelf" %>
+    <%= @page_title || t('.title') %>
   </div>
   <div id="columns">
     <div id="side">
@@ -21,10 +21,10 @@
         <% end %>
       </div>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/">Questions</a></li>
-        <li><a href="/">News</a></li>
-        <li><a href="/">Contacts</a></li>
+        <li><a href="/"><%= t('.home') %></a></li>
+        <li><a href="/"><%= t('.questions') %></a></li>
+        <li><a href="/"><%= t('.news') %></a></li>
+        <li><a href="/"><%= t('.contacts') %></a></li>
         <li class="red"><%= raw(Time.now.strftime("%Y-%m-%d<br> %H:%M")); %></li>
         <% if !authorized_user? %>
           <p><%= link_to 'Sign In', login_path  %></p>
