--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,7 +1,7 @@
 <% if notice %>
   <p id="notice"><%= notice %></p>
 <% end %>
-<h1>Cotalog of Books</h1>
+<h1><%= t('.title_html') %></h1>
 <% @products.each do |product| %>
   <div class="entry">
     <%= image_tag(product.image_url) %>
@@ -9,7 +9,7 @@
    <p><%= sanitize(product.description) %></p>
     <div class="price_line">
       <span class="price"><%= number_to_currency(product.price) %></span>
-      <%= button_to 'Add to Cart', line_items_path(product_id: product),class:'btn btn-primary', remote:true %>
+      <%= button_to t('.add_html'), line_items_path(product_id: product),class:'btn btn-primary', remote:true %>
     </div>
   </div>
 <% end %>
