--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Order</h1>
 <div class="depot_form">
   <fieldset>
-    <legend>Please Enter Your Details</legend>
+    <legend><%= t('.legend') %></legend>
     <%= render 'form' %>
   </fieldset>
 </div>
