--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -23,7 +23,7 @@
     <%= f.text_field :email, size:40 %>
   </div>
   <div class="field">
-    <%= f.label :pay_type_id %><br>
+    <%= f.label :pay_type_id, t('.pay_type') %><br>
     <%= collection_select(:order, :pay_type_id, PayType.all, :id, :name) %>
   </div>
   <div class="actions">
