--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -5,7 +5,7 @@
 
     <tr class="total_line">
       <td colspan="2">Total</td>
-      <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
+      <td class="total_cell"><%= currency_to_locale(cart.total_price) %></td>
     </tr>
   </table>
   <div class="form-group">
