--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.text_field :image_url %>
   </div>
   <div class="field">
+    <%= f.label :locale %><br>
+    <%= f.select :locale, LANGUAGES %>
+  </div>
+  <div class="field">
     <%= f.label :price %><br>
     <%= f.text_field :price %>
   </div>
