--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,7 +11,10 @@
   <strong>Description:</strong>
   <%= @product.description %>
 </p>
-
+<p>
+  <b>Locale:</b>
+  <%= @product.locale %>
+</p>
 <p>
   <strong>Image url:</strong>
   <%= @product.image_url %>
