--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -5,6 +5,6 @@
 <% end %>
   <td><%= line_item.quantity %> &times;</td>
   <td><%= line_item.product.title %></td>
-  <td class="item_price"><%= number_to_currency( line_item.total_price) %></td>
+  <td class="item_price"><%= currency_to_locale( line_item.total_price) %></td>
   <td><%= button_to "Dec", decrement_line_item_url(line_item), method: :put,class:'btn btn-danger',remote:'true' %></td>
 </tr>
