--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_for(@order) do |f| %>
   <% if @order.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
-
+      <h2><%= raw t('errors.template.header', count: @order.errors.count, model: t('activerecord.models.order')) %> </h2>
+      <p><%= t('errors.template.body') %></p>
       <ul>
-      <% @order.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <% @order.errors.full_messages.each do |msg| %>
+        <li><%=raw msg %></li>
       <% end %>
       </ul>
     </div>
