--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -8,7 +8,7 @@
     <h3><%= product.title %></h3>
    <p><%= sanitize(product.description) %></p>
     <div class="price_line">
-      <span class="price"><%= number_to_currency(product.price) %></span>
+      <span class="price"><%= currency_to_locale(product.price) %></span>
       <%= button_to t('.add_html'), line_items_path(product_id: product),class:'btn btn-primary', remote:true %>
     </div>
   </div>
