--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -105,3 +105,27 @@
     br{display: none;}
   }
 }
+.wrapper{
+  height: 100%;
+  min-height: 100%;
+  padding-bottom: 150px;
+}
+.footer{
+  width: 100%;
+  height: 150px;
+  margin-top: -160px;
+  background-color: #141;
+  h4{
+    padding-top: 55px;
+    color: #5BC0DE;
+    a{
+      &:visited {
+        color: red;
+      }
+      &:hover{
+        cursor: pointer;
+      }
+      color: #D9534F;
+    }
+  }
+}
