--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body class="<%= controller.controller_name %>">
+<div class="wrapper">
   <div id="banner">
     <%= form_tag store_path, class: 'locale' do %>
       <%= select_tag 'set_locale',
@@ -52,5 +53,11 @@
       <%= yield %>
     </div>
   </div>
+</div>
+<div class="footer">
+  <div class="text-center">
+    <h4><a href="https://ua.linkedin.com/in/pavlo-nikytynskyi-9bb2a892">Nikitinskiy Pavel</a> Ruby on Rails developer. Sample project.</h4>
+  </div>
+</div>
 </body>
 </html>
