Add link in footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -115,6 +115,9 @@
   height: 150px;
   margin-top: -160px;
   background-color: #141;
+  p{
+    color: white;
+  }
   h4{
     padding-top: 55px;
     color: #5BC0DE;
