--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,9 @@
 </div>
 <div class="footer">
   <div class="text-center">
-    <h4><a href="https://ua.linkedin.com/in/pavlo-nikytynskyi-9bb2a892">Nikitinskiy Pavel</a> Ruby on Rails developer. Sample project.</h4>
+    <h4><a href="https://ua.linkedin.com/in/pavlo-nikytynskyi-9bb2a892">Nikitinskiy Pavel</a> Ruby on Rails developer. Sample project.
+      <a href="https://github.com/PavelNikitinskiy/Books_Shop">Github</a></h4>
+    <p>For Log in: admin; password;</p>
   </div>
 </div>
 </body>
