--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= order.name %></td>
         <td><%= order.addres %></td>
         <td><%= order.email %></td>
-        <td><%= order.pay_time %></td>
+        <td><%= order.pay_type %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
