--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -10,7 +10,7 @@
       <th>Name</th>
       <th>Addres</th>
       <th>Email</th>
-      <th>Pay time</th>
+      <th>Pay type</th>
       <th colspan="3"></th>
     </tr>
   </thead>
